# ndk-study

QVoice/: readme.txt  settings.gradle
QVoice/app/: build.gradle
QVoice/app/src/main/: AndroidManifest.xml
QVoice/app/src/main/java/com/personal/qvoice/: MainActivity.java
QVoice/app/src/main/jni/: CMakeLists.txt  com_personal_qvoice_MainActivity.h  native-lib.cpp
QVoice/app/src/main/res/layout/: activity_main.xml
QVoice/app/src/main/res/values/: strings.xml
QVoice/app/src/test/java/com/personal/qvoice/: ExampleUnitTest.java
QVoice/gradle/wrapper/: gradle-wrapper.properties
SnailPlayer/: settings.gradle
SnailPlayer/app/: build.gradle
SnailPlayer/app/src/androidTest/java/com/personal/player/: ExampleInstrumentedTest.java
SnailPlayer/app/src/main/: AndroidManifest.xml
SnailPlayer/app/src/main/java/com/personal/player/: MainActivity.java
SnailPlayer/app/src/main/java/com/snail/player/: SnailPlayer.java
SnailPlayer/app/src/main/jni/: CMakeLists.txt
SnailPlayer/app/src/main/jni/player/: native-lib.cpp
SnailPlayer/app/src/main/res/layout/: activity_main.xml
SnailPlayer/app/src/main/res/values/: strings.xml
SnailPlayer/app/src/test/java/com/personal/player/: ExampleUnitTest.java
SnailPlayer/gradle/wrapper/: gradle-wrapper.properties
